--- a/sections/main-videos.liquid
+++ b/sections/main-videos.liquid
@@ -2,7 +2,7 @@
 
 <div class="videos-section-wrapper">
   <div class="container-main">
-    <h2 class="videos-title">YOUS SAID IT BEST</h2>
+    <h2 class="videos-title">{{ section.settings.videos-title }}</h2>
     <div class="video-grid">
       <div class="video-div1">
         <div class="video-wrapper">
@@ -16,8 +16,8 @@
             </div>
           </div>
         </div>
-        <h3 class="video-div-title">TITLE TITLE TITLE</h3>
-        <p class="video-description">Short description  Short description</p>
+        <h3 class="video-div-title">{{ section.settings.videos-video-title-1 }}</h3>
+        <p class="video-description">{{ section.settings.videos-video-description-1 }}</p>
       </div>
       <div class="video-div2">
         <div class="video-wrapper">
@@ -31,8 +31,8 @@
             </div>
           </div>
         </div>
-        <h3 class="video-div-title">TITLE TITLE TITLE</h3>
-        <p class="video-description">Short description  Short description</p>
+        <h3 class="video-div-title">{{ section.settings.videos-video-title-2 }}</h3>
+        <p class="video-description">{{ section.settings.videos-video-description-2 }}</p>
       </div>
       <div class="video-div3">
         <div class="video-wrapper">
@@ -46,10 +46,64 @@
             </div>
           </div>
         </div>
-        <h3 class="video-div-title">TITLE TITLE TITLE</h3>
-        <p class="video-description">Short description  Short description</p>
+        <h3 class="video-div-title">{{ section.settings.videos-video-title-3 }}</h3>
+        <p class="video-description">{{ section.settings.videos-video-description-3 }}</p>
       </div>
     </div>
   </div>
 </div>
 {{ 'video-controll.js'  | asset_url | script_tag     }}
+{% schema %}
+  {
+    "name": "videos",
+    "settings": [
+      {
+        "id": "videos-title",
+        "type": "text",
+        "label": "Videos block title",
+        "default":"YOUS SAID IT BEST"
+      },
+      {
+        "id": "videos-video-title-1",
+        "type": "text",
+        "label": "Video 1 title",
+        "default":"TITLE TITLE TITLE"
+      },
+      {
+        "id": "videos-video-description-1",
+        "type": "textarea",
+        "label": "Video 1 description",
+        "default":"Short description Short description"
+      },
+      {
+        "id": "videos-video-title-2",
+        "type": "text",
+        "label": "Video 2 title",
+        "default":"TITLE TITLE TITLE"
+      },
+      {
+        "id": "videos-video-description-2",
+        "type": "textarea",
+        "label": "Video 2 description",
+        "default":"Short description Short description"
+      },
+      {
+        "id": "videos-video-title-3",
+        "type": "text",
+        "label": "Video 3 title",
+        "default":"TITLE TITLE TITLE"
+      },
+      {
+        "id": "videos-video-description-3",
+        "type": "textarea",
+        "label": "Video 3 description",
+        "default":"Short description Short description"
+      },
+    ],
+    "presets": [
+      {
+        "name": "Counters"
+      }
+    ]
+  }
+{% endschema %}
