videos settings fix

--- a/sections/main-videos.liquid
+++ b/sections/main-videos.liquid
@@ -98,11 +98,11 @@
         "type": "textarea",
         "label": "Video 3 description",
         "default":"Short description Short description"
-      },
+      }
     ],
     "presets": [
       {
-        "name": "Counters"
+        "name": "videos"
       }
     ]
   }
