video banner fix

--- a/sections/main-video-banner.liquid
+++ b/sections/main-video-banner.liquid
@@ -21,6 +21,7 @@
 {% schema %}
   {
     "name": "Banner",
+    "class":"overflow-hidden",
     "settings": [
       {
         "id": "banner-title",
