--- a/assets/section-video-banner.css
+++ b/assets/section-video-banner.css
@@ -66,7 +66,7 @@ h1.banner-heading-h1{
   height: 100%;
   object-fit: cover;
 }
-#shopify-section-template--14326481584264__video_banner{
+.overflow-hidden{
   position: relative;
   overflow: hidden;
 }
