--- a/sections/main-transformation.liquid
+++ b/sections/main-transformation.liquid
@@ -4,8 +4,8 @@
   <div class="slider-overlay">
     <div class="overlay-row">
       <div class="overlay-col1">
-        <h2 class="transform-heading">{{ section.settings.transformation-title }}</h2>
-        <p class="transform-text">{{ section.settings.transformation-text }} </p>    
+        <h2 class="transform-heading">{{ section.settings.Transformation-title }}</h2>
+        <p class="transform-text">{{ section.settings.Transformation-text }} </p>    
       </div>
       <div class="overlay-col2">
         <div class="desktop-controlls">
