--- a/sections/main-expectations.liquid
+++ b/sections/main-expectations.liquid
@@ -8,25 +8,25 @@
         <div class="icon-border">
           <img src="{{section.settings.icon-1| img_url: 'medium'}}" alt="Great cut icon" class="expectation-icon">
         </div>
-        <h3 class="icon-description">{{ section.settings.expectations-1 }}</h3>
+        <h3 class="icon-description">{{ section.settings.expectation-1 }}</h3>
       </div>
       <div class="expectation-div2 center">
         <div class="icon-border">
           <img src="{{section.settings.icon-2| img_url: 'medium'}}" alt="Favorite drink icon" class="expectation-icon">
         </div>
-        <h3 class="icon-description">{{ section.settings.expectations-2 }}</h3>
+        <h3 class="icon-description">{{ section.settings.expectation-2 }}</h3>
       </div>
       <div class="expectation-div3 center">
         <div class="icon-border">
           <img src="{{section.settings.icon-3| img_url: 'medium'}}" alt="Good conversation icon" class="expectation-icon">
         </div>
-        <h3 class="icon-description">{{ section.settings.expectations-3 }}</h3>
+        <h3 class="icon-description">{{ section.settings.expectation-3 }}</h3>
       </div>
       <div class="expectation-div4 center">
         <div class="icon-border">
           <img src="{{section.settings.icon-4| img_url: 'medium'}}" alt="Relax icon" class="expectation-icon">
         </div>
-        <h3 class="icon-description">{{ section.settings.expectations-4 }}</h3>
+        <h3 class="icon-description">{{ section.settings.expectation-4 }}</h3>
       </div>
     </div>
   </div>
