--- a/sections/main-guarantee.liquid
+++ b/sections/main-guarantee.liquid
@@ -5,9 +5,33 @@
   </div>
   <!-- <img src="{{'guarantee-left.png'| asset_url }}" alt="Guarantee badge" class="left-badge"> -->
     <div class="guarantee-text-wrapper">
-      <h2 class="guarantee-title">our satisfaction guarantee</h2>
-      <p class="guarantee-text">Your satisfaction is our priority! If for any reason you are not 100% thrilled with your service, you can come back again, and we’ll make it right. </p>
+      <h2 class="guarantee-title">{{ section.settings.guarantee-title }}</h2>
+      <p class="guarantee-text">{{ section.settings.guarantee-text }}</p>
     </div>
   <img src="{{'guarantee-right.png'| asset_url }}" alt="Guarantee badge" class="right-badge">
   <img src="{{'guarantee-mobile.png'| asset_url }}" alt="Guarantee badge" class="mobile-badge">
 </div>
+{% schema %}
+  {
+    "name": "Guarantee",
+    "settings": [
+      {
+        "id": "guarantee-title",
+        "type": "text",
+        "label": "Guarantee title",
+        "default":"our satisfaction guarantee"
+      },
+      {
+        "id": "guarantee-text",
+        "type": "textarea",
+        "label": "Guarantee text",
+        "default":"Your satisfaction is our priority! If for any reason you are not 100% thrilled with your service, you can come back again, and we’ll make it right."
+      }
+    ],
+    "presets": [
+      {
+        "name": "Guarantee"
+      }
+    ]
+  }
+{% endschema %}
