--- a/sections/main-booking.liquid
+++ b/sections/main-booking.liquid
@@ -1,27 +1,27 @@
 {{ 'section-booking.css' | asset_url | stylesheet_tag }}
 <div class="booking-section-wrapper">
   <div class="container-main">
-    <h2 class="booking-title">how it works</h2>
+    <h2 class="booking-title">{{ section.settings.booking-title }}</h2>
     <div class="booking-grid">
       <div class="booking-div1">
         <div><h class="numbering">1</h></div>
         <div>
-          <h3 class="booking-heading">choose a location</h3>
-          <p class="booking-text">Multiple shops. Consistent quality experience. </p>
+          <h3 class="booking-heading">{{ section.settings.booking-heading-1 }}</h3>
+          <p class="booking-text">{{ section.settings.booking-description-1 }}</p>
         </div>
       </div>
       <div class="booking-div2">
         <div class="numbering">2</div>
         <div>
-          <h3 class="booking-heading">choose a service</h3>
-          <p class="booking-text">What do you like? We’ll make it happen.</p>
+          <h3 class="booking-heading">{{ section.settings.booking-heading-2 }}</h3>
+          <p class="booking-text">{{ section.settings.booking-description-2 }}</p>
         </div>
       </div>
       <div class="booking-div3">
         <div class="numbering">3</div>
         <div>
-          <h3 class="booking-heading">enjoy your look</h3>
-          <p class="booking-text">Trust  us, you’re gonna look amazing.</p>
+          <h3 class="booking-heading">{{ section.settings.booking-heading-3 }}</h3>
+          <p class="booking-text">{{ section.settings.booking-description-3 }}</p>
         </div>
       </div>
     </div>
