--- a/assets/section-transformation.css
+++ b/assets/section-transformation.css
@@ -23,7 +23,7 @@ img {
   border: 2px solid white;
   border-radius: 100%;
 }
-.w3-white{
+.background-white{
   background-color: white;
 }
 .prev-arrow{
