--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1,3 +1,162 @@
+.giftcards-wrapper{
+  display: flex;
+  justify-content: center;
+  padding:70px 140px 70px 140px;
+  background-color: #FAFAFA;
+}
+.giftcards-container{
+  max-width: 1160px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 0px;
+}
+.giftcard-slider{
+  grid-area: 1 / 1 / 2 / 9;
+}
+.selection{
+  grid-area: 1 / 9 / 2 / 13;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.slider-content{
+  display: flex;
+}
+.mySlides{
+  width: 580px;
+  height: 580px;
+  object-fit: cover;
+}
+.slide-preview{
+  width: 126px;
+  height: 126px;
+}
+.slide-preview:not(:last-child){
+  margin-bottom: 25px;
+}
+.slide-preview-image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.6;
+}
+.slide-preview-imagew:hover{
+  opacity: 1;
+}
+.opacity-off{
+  opacity: 1;
+}
+.slide-preview-row{
+  margin-right: 25px;
+}
+.slider-controll-icons{
+  color: white;
+  background-color:#736565;
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  border: none;
+  font-size: 26px;
+}
+.slider-controll-icons.prev{
+  top:50%;
+  left:0%;
+  transform: translate(0%,-50%);
+}
+.slider-controll-icons.next{
+  top:50%;
+  right:0%;
+  transform: translate(0%,-50%);
+}
+.nav-disaebled{
+  background-color: #CCCCCC;
+}
+.selection-title{
+  font-family: Bebas Neue,sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 150%;
+  color: #FFFFFF;
+  padding:8px 30px;
+  background-color: #736565;
+  text-align: center;
+  margin-bottom: 70px;
+  margin-top: 0;
+}
+.amount{
+  font-family: Archivo Narrow,cursive;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 150%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #736565;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+.quantity{
+  background-color: #FFFFFF;
+  border-radius: 46.5px;
+  border: none;
+  width: 320px;
+  margin-bottom: 138px;
+  height: 60px;
+  
+}
+.quantity__button{
+  background-color: #736565;
+  border-radius: 46.5px;
+  color:white;
+  width: auto;
+  padding:17px 37px;
+
+}
+.quantity__button svg{
+  width: 26px;
+}
+.quantity__input{
+  font-family: Archivo Narrow,cursive;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 34px;
+  line-height: 150%;
+  text-align: center;
+  color: #444444;
+}
+#optionSelector{
+  width: 320px;
+  height: 80px;
+  border-radius: 46.5px;
+  font-family: Archivo Narrow,cursive;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 34px;
+  line-height: 150%;
+  text-align: justify;
+  color: #444444;
+  background-color: white;
+  border:none;
+  padding:15px 10px 15px 30px;
+  margin-bottom:40px;
+}
+#optionSelector:focus-visible{
+  background-color: #736565;
+  outline: none;
+  box-shadow: none;
+}
+#optionSelector option{
+  background-color: #736565;
+}
+option:first-child {
+border-radius: 40px;
+}
+option:last-child {
+  border-radius: 40px;
+  }
 .product {
   margin: 0;
 }
