--- a/assets/section-videos.css
+++ b/assets/section-videos.css
@@ -48,8 +48,9 @@ video{
 }
 .video-section{
   position: absolute;
-  left:35%;
-  top: 35%;
+  left:50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 .video-controll-overlay{
   background-color: rgba(108, 108, 108, 0.6);
