--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1,41 +1,13 @@
 .giftcards-wrapper{
   display: flex;
   justify-content: center;
-  padding:70px 140px 70px 140px;
   background-color: #FAFAFA;
 }
-.giftcards-container{
-  max-width: 1160px;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 1fr;
-  grid-column-gap: 20px;
-  grid-row-gap: 0px;
-}
-.giftcard-slider{
-  grid-area: 1 / 1 / 2 / 9;
-}
-.selection{
-  grid-area: 1 / 9 / 2 / 13;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.slider-content{
-  display: flex;
-}
-.mySlides{
-  width: 580px;
-  height: 580px;
-  object-fit: cover;
-}
-.slide-preview{
-  width: 126px;
-  height: 126px;
-}
-.slide-preview:not(:last-child){
-  margin-bottom: 25px;
-}
+
+
+
+
+
 .slide-preview-image{
   width: 100%;
   height: 100%;
@@ -48,9 +20,7 @@
 .opacity-off{
   opacity: 1;
 }
-.slide-preview-row{
-  margin-right: 25px;
-}
+
 .slider-controll-icons{
   color: white;
   background-color:#736565;
@@ -85,6 +55,7 @@
   text-align: center;
   margin-bottom: 70px;
   margin-top: 0;
+  border-radius: 6px;
 }
 .amount{
   font-family: Archivo Narrow,cursive;
@@ -105,6 +76,7 @@
   width: 320px;
   margin-bottom: 138px;
   height: 60px;
+  margin-top:50px;
   
 }
 .quantity__button{
@@ -115,9 +87,7 @@
   padding:17px 37px;
 
 }
-.quantity__button svg{
-  width: 26px;
-}
+
 .quantity__input{
   font-family: Archivo Narrow,cursive;
   font-style: normal;
@@ -157,6 +127,289 @@ border-radius: 40px;
 option:last-child {
   border-radius: 40px;
   }
+
+/* The container must be positioned relative: */
+.custom-select {
+  position: relative;
+}
+
+.custom-select select {
+  display: none; /*hide original SELECT element: */
+}
+
+.select-selected {
+  background-color: white;
+  font-family: Archivo Narrow,cursive;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 34px;
+  line-height: 150%;
+  text-align: justify;
+  color: #444444;
+  border-radius: 46.5px;
+  padding: 8px 16px;
+}
+
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  background-color: #736565;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 46.5px;
+  content: url(optionArrow.svg);
+  right: 10px;
+}
+
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  background-color: white;
+  content:url(optionArrow2.svg)
+}
+
+/* style the items (options), including the selected item: */
+.select-items div {
+  padding: 8px 16px;
+  background-color: #736565;
+  cursor: pointer;
+  font-family: Archivo Narrow,cursive;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 34px;
+  line-height: 150%;
+  text-align: justify;
+  color: rgba(255, 255, 255, 0.4);
+}
+.select-items div:not(:last-child){
+  border-bottom: 0.5px solid rgba(255, 255, 255, 0.4);
+}
+
+
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  color:white;
+}
+.giftcards-title{
+  font-family: Bebas Neue,sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 45px;
+  line-height: 150%;
+  text-align: center;
+  margin-bottom: 0;
+  margin-top: 0;
+  color: #444444;
+}
+@media screen and (max-width:1378px){
+  .giftcards-wrapper{
+    padding:40px 20px 40px 20px;
+    
+  }
+  .giftcards-container{
+    max-width: 1160px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+  }
+  .giftcard-slider{
+    grid-area: 1 / 1 / 2 / 3;
+    padding-bottom: 40px;
+    border-bottom: 0.5px solid #736565;
+  }
+  .selection{
+    grid-area: 2 / 1 / 3 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .mySlides{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .slide-preview{
+    width: 69px;
+    height: 69px;
+  }
+  .slide-preview:not(:last-child){
+    margin-right: 20px;
+  }
+  .slider-content{
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 40px; 
+  }
+  .slide-preview-row{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    justify-content: space-between;
+  }
+  .giftcards-title{
+    font-size: 30px;
+  }
+  .slider-controll-icons{
+    width: 50px;
+    height: 50px;
+    border: none;
+    font-size: 18px;
+  }
+  .slider-controll-icons.prev{
+    display: none;
+  }
+  .slider-controll-icons.next{
+    display: none;
+  }
+  .slider-controll-icons.prev2{
+    display: block;
+    position: relative;
+    margin-right: 10px;
+  }
+  .slider-controll-icons.next2{
+    display: block;
+    position: relative;
+  }
+  .mobile-button-wrapper{
+    display: flex;
+    justify-content: center;
+  }
+  .selection-title{
+    font-size: 22px;
+    margin-bottom: 35px;
+    margin-top: 45px;
+    padding:5px 20px 5px 20px;
+  }
+  .amount{
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+  .select-selected{
+    font-size: 22px;
+    padding: 10px 0px 10px 20px;
+  }
+  .select-selected::after{
+    right: 5px;
+    content: url(optionArrowMobile.svg);
+  }
+  .select-selected.select-arrow-active:after{
+    content: url(optionArrowMobile2.svg);
+  }
+  .select-items div{
+    font-size: 22px;
+  }
+  .select-items div:last-child{
+    border-radius: 0px 0px 20px 20px;
+  }
+  .select-arrow-active{
+    background-color: #736565;
+    color: white;
+    border-radius: 20px 20px 0px 0px;
+  }
+  .quantity{
+    margin-top: 20px;
+    margin-bottom:79px ;
+    height: 40px;
+  }
+  .quantity__input{
+    font-size: 22px;
+  }
+  .quantity__button svg{
+    width: 14px;
+  }
+  .quantity__button{
+    padding:13px 26px;
+    width: 65px;
+  }
+}
+@media screen and (min-width:1379px){
+  .giftcards-wrapper{
+    padding:70px 140px 70px 140px;
+  }
+  .giftcards-container{
+    max-width: 1160px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 0px;
+  }
+  .giftcard-slider{
+    grid-area: 1 / 1 / 2 / 9;
+  }
+  .selection{
+    grid-area: 1 / 9 / 2 / 13;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .mySlides{
+    width: 580px;
+    height: 580px;
+    object-fit: cover;
+  }
+  .slide-preview{
+    width: 126px;
+    height: 126px;
+  }
+  .slide-preview:not(:last-child){
+    margin-bottom: 25px;
+  }
+  .slider-content{
+    display: flex;
+  }
+  .slide-preview-row{
+    margin-right: 25px;
+  }
+  .giftcards-title{
+    font-family: Bebas Neue,sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 45px;
+    line-height: 150%;
+    text-align: center;
+    margin-bottom: 0;
+    margin-top: 0;
+    color: #444444;
+  }
+  .slider-controll-icons.prev2{
+    display: none;
+  }
+  .slider-controll-icons.next2{
+    display: none;
+  }
+  .select-items div:last-child{
+    border-radius: 0px 0px 40px 40px;
+  }
+  .select-arrow-active{
+    background-color: #736565;
+    color: white;
+    border-radius: 40px 40px 0px 0px;
+  }
+  .quantity__button svg{
+    width: 26px;
+  }
+}
+
+
+
+
+
+
 .product {
   margin: 0;
 }
@@ -292,8 +545,8 @@ option:last-child {
 .product-form__input {
   flex: 0 0 100%;
   padding: 0;
-  margin: 0 0 1.2rem 0;
-  max-width: 37rem;
+  margin: 0 0 0 0;
+  width: 320px;
   min-width: fit-content;
   border: none;
 }
