--- a/snippets/article-card.liquid
+++ b/snippets/article-card.liquid
@@ -17,7 +17,7 @@
   <a href="{{ article.url }}" class="article-content motion-reduce">
     {%- if show_image == true and article.image -%}
       <div class="article-card__image-wrapper">
-        <div class="article-card__image media {% if image_height %}article-card__image--{{ image_height }}{% else %}media--landscape{% endif %}" {% if section.settings.image_height == 'adapt' %} style="padding-bottom: {{ 1 | divided_by: article.image.aspect_ratio | times: 100 }}%;"{% endif %}>
+        <div class="article-card__image media {% if image_height %}article-card__image--{{ image_height }}{% else %}media--landscape{% endif %}">
           <img
             srcset="{%- if article.image.src.width >= 165 -%}{{ article.image.src | img_url: '165x' }} 165w,{%- endif -%}
               {%- if article.image.src.width >= 360 -%}{{ article.image.src | img_url: '360x' }} 360w,{%- endif -%}
@@ -26,7 +26,7 @@
               {%- if article.image.src.width >= 1000 -%}{{ article.image.src | img_url: '1000x' }} 1000w,{%- endif -%}
               {%- if article.image.src.width >= 1500 -%}{{ article.image.src | img_url: '1500x' }} 1500w,{%- endif -%}
               {{ article.image.src | img_url: 'master' }} {{ article.image.src.width }}w"
-            src="{{ article.image.src | img_url: '533x' }}"
+            src="{{ article.image.src | img_url: '560x' }}"
             sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 2 }}px, (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)"
             alt="{{ article.image.src.alt | escape }}"
             width="{{ article.image.width }}"
@@ -35,25 +35,37 @@
             class="motion-reduce"
           >
         </div>
+        <div class="article-category">
+          <p class="article-category-text">
+            {% for tag in article.tags %}
+              {% if tag != "New" %}
+                {{ tag }}
+              {% endif %}
+            {% endfor %}
+          </p>
+        </div>
       </div>
     {%- endif -%}
 
     <div class="article-card__info">
       <header class="article-card__header">
+        <div class="article-meta">
+          <div style="display: flex;">
+            <p class="article-meta-text date">
+              {{- article.published_at | date: "%b %d" -}}
+            </p>
+            <p class="article-meta-text">5 min read</p>
+          </div>
+          
+          <div class="author"><div class="author-line"></div><p class="article-meta-text">{{ article.author -}}</p></div>
+        </div>
         <h2 class="article-card__title" id="Article-{{ article.id }}">
           {{ article.title | escape }}
         </h2>
-        {%- if show_date -%}
-          <span class="circle-divider caption-with-letter-spacing">
-            {{- article.published_at | time_tag: format: 'date' -}}
-          </span>
-        {%- endif -%}
-        {%- if show_author -%}
-          <span class="caption-with-letter-spacing">{{ article.author -}}</span>
-        {%- endif -%}
+          
       </header>
       {%- if article.excerpt.size > 0 or article.content.size > 0 -%}
-        <p class="article-card__excerpt rte-width">
+        <p class="article-card__excerpt">
           {%- if article.excerpt.size > 0 -%}
             {{ article.excerpt | strip_html | truncatewords: 30 }}
           {%- else -%}
@@ -61,11 +73,7 @@
           {%- endif -%}
         </p>
       {%- endif -%}
-      <div class="article-card__footer">
-        {%- if article.comments_count > 0 and blog.comments_enabled? -%}
-          <span>{{ 'blogs.article.comments' | t: count: article.comments_count }}</span>
-        {%- endif -%}
-      </div>
+      <a href="{{ article.url }}" class="article-link">Read more</a>
     </div>
   </a>
 </article>
