--- a/sections/main-barbers.liquid
+++ b/sections/main-barbers.liquid
@@ -1,5 +1,6 @@
 {{ 'component-barber-card.css' | asset_url | stylesheet_tag }}
 {{ 'section-barbers.css' | asset_url | stylesheet_tag }}
-
-
+<div style="padding-top: 200px;">
+Hello world
+</div>
 {{ 'barbers-controll.js'  | asset_url | script_tag     }}
